<resources>
    <!-- Home Activity -->
    <string name="app_name">Mahitab.com</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="back_again">Please click BACK again to exit</string>
    <string name="search">Search</string>
    <string name="see_all">See All</string>
    <!-- Home Activity -->



    <string name="changePass">change Password</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="egp">\u0020EGP</string>
    <string name="payment_upon_receipt">Payment upon receipt</string>
    <string name="free_shipping">Free shipping</string>
    <string name="free_returns_and_exchanges">Free returns and exchanges</string>
    <string name="description">Description</string>
    <string name="colors">Colors</string>
    <string name="shapes">Shapes</string>
    <string name="related_products">Related Products</string>
    <string name="buy">Buy</string>
    <string name="subtotal">SubTotal:\u0020</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="your_cart_is_empty_add_now_what_you_love">Your cart is empty!, Add Now what you love 😍</string>
    <string name="welcome">Welcome,\u0020</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="empty_field_error_message">Field cannot be empty</string>
    <string name="mobile_hit" translatable="false">01234567890</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_addresses">My Addresses</string>
    <string name="help">Help?</string>
    <string name="order_no">Order No.</string>
    <string name="grand_total">Grand Total</string>
    <string name="order_date">Order Date</string>
    <string name="order_status">Order Status</string>
    <string name="edit">Edit</string>

    <string-array name="colors">
        <item>#FFFFFF</item>
        <item>#000000</item>
        <item>#FF0000</item>
        <item>#0000FF</item>
        <item>#A52A2A</item>
        <item>#008000</item>
        <item>#FFFF00</item>
        <item>#87CEEB</item>
        <item>#000080</item>
    </string-array>
    <string name="sign_out_message">You are Logged Out Successfully!</string>
    <string name="moreDetails">More details</string>
    <string name="OrderNumber">Order Number</string>
    <string name="TotalPrice">Total Price</string>
    <string name="Date">Date</string>

    <!-- AddEditAddressActivity -->

    <string name="add_address">Add Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="address">Address</string>
    <string name="building_number_role_apartment">Building No. , Role, Apartment</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="address_added_successfully">Address Added Successfully</string>
    <string name="Province">Province</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Country">Country</string>
    <string name="City">City</string>
    <string name="Egypt">Egypt</string>
    <string name="address_updated_successfully">Address updated successfully!</string>
    <string-array name="provinces">
        <item>Select Province</item>
        <item>Aswan</item>
        <item>6th of October</item>
        <item>Al Sharqia</item>
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Asyut</item>
        <item>Beheira</item>
        <item>Beni Suef</item>
        <item>Giza</item>
        <item>Helwan</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Ismailia</item>
        <item>Kafr el-Sheikh</item>
        <item>Luxor</item>
        <item>Matrouh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Qena</item>
        <item>Red Sea</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>

    <!-- AddEditAddressActivity -->

    <string name="verify_phone">Verify Phone</string>
    <string name="we_have_sent_verification_code_to_your_number">We have sent verification code to your Number</string>
    <string name="_continue">Continue</string>
    <string name="resend_code">Resend Code?\u0020</string>
    <string name="try_again_later">We have blocked all requests from this device due to unusual activity. Try again later</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="Notes">Notes</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="something_went_wrong">Something went wrong please try again later</string>
    <string name="email_used_for_another_account">The email used for another account</string>
    <string name="invalid_code_message">Invalid verification code, please try again</string>
    <string name="add_review">Add Review</string>
    <string name="review">Review</string>
    <string name="reviews">Reviews</string>
    <string name="Home">Home</string>
    <string name="discount_percentage">% Discount</string>

    <!-- ResetPasswordActivity -->
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="check_your_email">A reset password email is on your way</string>
    <string name="we_will_send_you_an_email_to_reset_your_password_text">We will send you an email to reset your password.</string>
    <!-- ResetPasswordActivity -->
    <!-- change password-->
    <string name="changePasswordLogo">change password</string>
    <!-- change pasword -->
    <!--SearchResult-->
    <string name="hasntItem">Not Found Item</string>
    <!--SearchResult-->
    <string name="meter">Meter</string>
    <string name="number">Number</string>
    <string name="OrderState">Order State</string>
    <string name="RecentlyViewed">Recently Viewed</string>
    <string name="Please_enter_all_fields">Please enter all fields!</string>
    <string name="width_2_widths_150_cm">Width ~ 2 widths ≈ 150 cm ~</string>
    <string name="Delete">Delete</string>
    <string name="Do_you_want_to_Delete">Do you want to Delete?</string>
    <string name="Cancel">Cancel</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="check_your_email_and_password">"The email or password is incorrect !"</string>
    <string name="Select">اختر العنوان</string>
    <string name="under_review">Under review</string>
    <string name="oops_no_product_found">Oops! .. No Product Found</string>
    <string name="re_enter_search_key">لا توجد نتيجه للبحث,حاول البحث بكلمه اخري!</string>

</resources>