<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_attach_money_gray_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/payment_upon_receipt"
            android:textSize="8sp"
            app:autoSizeMaxTextSize="16dp"
            app:autoSizeMinTextSize="8dp"
            app:autoSizeStepGranularity="1dp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:srcCompat="@drawable/ic_cached_gray_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/free_returns_and_exchanges"
            android:textSize="8sp"
            app:autoSizeMaxTextSize="16dp"
            app:autoSizeMinTextSize="8dp"
            app:autoSizeStepGranularity="1dp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_local_shipping_gray_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:text="@string/free_shipping"
            android:textSize="8sp"
            app:autoSizeMaxTextSize="16dp"
            app:autoSizeMinTextSize="8dp"
            app:autoSizeStepGranularity="1dp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>
</LinearLayout>